@@ -1,6 +1,11 @@
 2010-02-12
 
-	* src/compose: Preserve spell-checking settings saving and loading
+	* src/compose.c: Preserve PGP settings saving and loading drafts
+	  (thanks to Antonio).
+
+2010-02-12
+
+	* src/compose.c: Preserve spell-checking settings saving and loading
 	  drafts (thanks to Antonio).
 
 2010-02-12
